--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
 <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<!--employee search view-->
+
 <script id="home-tpl" type="text/x-handlebars-template">
     <div class='header'><h1>Home</h1></div>
     <div class='search-bar'><input class='search-key' type="search"/></div>
     <div class="scroll"><ul class='employee-list'></ul></div>
 </script>
-<!--employee list view-->
+
 <script id="employee-li-tpl" type="text/x-handlebars-template">
     {{#.}}
     <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}<br/>{{this.title}}</a></li>
     {{/.}}
 </script>
-<!--employee detail view-->
+
 <script id="employee-tpl" type="text/x-handlebars-template">
     <div class='header'><a href='#' class="button header-button header-button-left">Back</a><h1>Details</h1></div>
     <div class='details'>
-        <img id='image' src='img/{{firstName}}_{{lastName}}.jpg' style="float:left;margin:10px;"/>
-        <h1>{{firstName}} {{lastName}}</h1>
-        <h2>{{title}}</h2>
-        <ul>
-            <li><a href="tel:{{officePhone}}">Call Office<br/>{{officePhone}}</a></li>
-            <li><a href="tel:{{cellPhone}}">Call Cell<br/>{{cellPhone}}</a></li>
-            <li><a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a></li>
-        	<li><a href="#" class="add-location-btn">Add Location</a></li>
-        	<li><a href="#" class="add-contact-btn">Add to Contacts</a></li>
-        </ul>
+    <img id='image' src='img/{{firstName}}_{{lastName}}.jpg' style="float:left;margin:10px;"/>
+    <h1>{{firstName}} {{lastName}}</h1>
+    <h2>{{title}}</h2>
+    <span class="location"></span>
+    <ul>
+    <li><a href="tel:{{officePhone}}">Call Office<br/>{{officePhone}}</a></li>
+    <li><a href="tel:{{cellPhone}}">Call Cell<br/>{{cellPhone}}</a></li>
+    <li><a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a></li>
+    <li><a href="#" class="add-location-btn">Add Location</a></li>
+    <li><a href="#" class="add-contact-btn">Add to Contacts</a></li>
+    <li><a href="#" class="change-pic-btn">Change Picture</a></li>
+    </ul>
     </div>
 </script>
 
@@ -40,5 +42,6 @@
 <script src="js/HomeView.js"></script>
 <script src="js/EmployeeView.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 </html>
